--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="timeline-content">
                     <h4>Graduando em ADS</h4>
                     <span>5ª Periodo em curso</span>
-                    <p style="font-size: 0.9rem; color: var(--text-sec);">Procura de um estágio</p>
+                    <p style="font-size: 0.9rem; color: var(--text-sec);">Procurando um estágio</p>
                 </div>
             </div>
 
