--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diogo Lobo | Vibe Coding</title>
     
-    <meta name="description" content="Portfólio de Desenvolvedor Full Stack.">
+    <meta name="description" content="Portfólio de Desenvolvedor Front-End.">
     <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/1005/1005141.png">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1005/1005141.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -51,7 +51,7 @@
         <h3 class="glitch-effect" data-text="HELLO WORLD, EU SOU">HELLO WORLD, EU SOU</h3>
         
         <h1>
-            <span class="txt-type" data-wait="2000" data-words='["DESENVOLVEDOR", "FRONT-END", "ESTUDANTE","CRIATIVO"]'></span>
+            <span class="txt-type" data-wait="2000" data-words='["VIBE CODING", "FRONT-END", "ESTUDANTE","CRIATIVO"]'></span>
         </h1>
         <p>🌟 Desenvolvedor Web em formação | 5º Período de Análise e Desenvolvimento de Sistemas</p>
         <div>
