--- a/index.html
+++ b/index.html
@@ -177,14 +177,13 @@
             </div>
 
             <div class="neon-card">
-                <div class="card-inner">
+             <div class="card-inner project-trigger" data-image="wikicx.png" data-title="Wiki Gamificado">
                     <div style="display: flex; justify-content: space-between; align-items: start;">
-                        <i class="fas fa-gamepad" style="font-size: 2rem; color: var(--accent); margin-bottom: 20px;"></i>
-                        <div class="card-arrow"><i class="fas fa-arrow-right"></i></div>
-                    </div>
-                    <h3>Game Hub</h3>
-                    <p>Busca de jogos via API.</p>
-                    <div class="tech-stack"><span>React</span><span>Axios</span></div>
+                        <i class="fas fa-book" style="font-size: 2rem; color: var(--accent); margin-bottom: 20px;"></i>
+                        <div class="card-arrow"><i class="fas fa-expand"></i></div> </div>
+                    <h3>Wikicx</h3>
+                    <p>Wiki de ensino gamificado.</p>
+                      <div class="tech-stack"><span>Js | php</span><span>MYSQL</span></div>
                     <div class="card-links">
                         <a href="#" class="card-btn"><i class="fab fa-github"></i> Code</a>
                         <a href="#" class="card-btn"><i class="fas fa-eye"></i> Demo</a>
