--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="neon-card">
                 <div class="card-inner project-trigger" data-image="print-saas.png" data-title="SaaS Dashboard">
                     <div style="display: flex; justify-content: space-between; align-items: start;">
-                        <i class="fas fa-chart-mixed" style="font-size: 2rem; color: var(--accent); margin-bottom: 20px;"></i>
+                        <i class="fas fa-chart-pie" style="font-size: 2rem; color: var(--accent); margin-bottom: 20px;"></i>
                         <div class="card-arrow"><i class="fas fa-expand"></i></div> </div>
                     <h3>SaaS Dashboard</h3>
                     <p>Painel administrativo completo.</p>
