--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <p>Wiki de ensino gamificado.</p>
                       <div class="tech-stack"><span>Js | php</span><span>MYSQL</span></div>
                     <div class="card-links">
-                        <a href="#" class="card-btn"><i class="fab fa-github"></i> Code</a>
+                        <a href="https://github.com/DioLobo/Wikicx" class="card-btn"><i class="fab fa-github"></i> Code</a>
                         <a href="#" class="card-btn"><i class="fas fa-eye"></i> Demo</a>
                     </div>
                 </div>
