--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                     <p>Painel administrativo completo.</p>
                     <div class="tech-stack"><span>Js | php</span><span>MYSQL</span></div>
                     <div class="card-links">
-                        <a href="#" class="card-btn" onclick="event.stopPropagation()"><i class="fab fa-github"></i> Code</a>
-                        <a href="#" class="card-btn" onclick="event.stopPropagation()"><i class="fas fa-eye"></i> Demo</a>
+                        <a href="" class="card-btn" onclick="event.stopPropagation()"><i class="fab fa-github"></i> Code</a>
+                        <a href="" class="card-btn" onclick="event.stopPropagation()"><i class="fas fa-eye"></i> Demo</a>
                     </div>
                 </div>
             </div>
@@ -185,8 +185,8 @@
                     <p>Wiki de ensino gamificado.</p>
                       <div class="tech-stack"><span>Js | php</span><span>MYSQL</span></div>
                     <div class="card-links">
-                        <a href="https://github.com/DioLobo/Wikicx" class="card-btn"><i class="fab fa-github"></i> Code</a>
-                        <a href="#" class="card-btn"><i class="fas fa-eye"></i> Demo</a>
+                        <a href="" class="card-btn"><i class="fab fa-github"></i> Code</a>
+                        <a href="" class="card-btn"><i class="fas fa-eye"></i> Demo</a>
                     </div>
                 </div>
             </div>
@@ -200,8 +200,8 @@
                     <p>Interface moderna de IA.</p>
                     <div class="tech-stack"><span>Next.js</span><span>OpenAI</span></div>
                     <div class="card-links">
-                        <a href="#" class="card-btn"><i class="fab fa-github"></i> Code</a>
-                        <a href="#" class="card-btn"><i class="fas fa-eye"></i> Demo</a>
+                        <a href="" class="card-btn"><i class="fab fa-github"></i> Code</a>
+                        <a href="" class="card-btn"><i class="fas fa-eye"></i> Demo</a>
                     </div>
                 </div>
             </div>
